name:                auth0
version:             0.1.0.4
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/toddmohney/auth0#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:
    Auth0.Access
    Auth0.Config
    Auth0.User
    Auth0.Identity

  build-depends: base >= 4.7 && < 5
               , aeson                 >= 0.11.2.0 && < 0.11.3.0
               , jose                  >= 0.4.0.2 && < 0.4.1.0
               , jwt                   >= 0.1.0.0 && < 0.1.1.0
               , lens                  >= 4.13 && < 5.0
               , mtl                   >= 2.2.1 && < 2.3.0
               , text                  >= 1.2.2.1 && < 1.2.3.0
               , wreq                  >= 0.4.1.0 && < 0.4.2.0

  default-language:    Haskell2010

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

test-suite auth0-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , auth0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toddmohney/auth0
